[package]
name = "she_bang"
version = "0.1.0"
default-run = "she_bang"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
numpy = "0"
pyo3 = { version = "0", features = ["auto-initialize"] }
reqwest = { version = "0", features = ["json"] }
sugiura-hiromichi_mylibrary = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
