# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.*"
gloo-utils={version="0.1",features=["serde"]}
console_error_panic_hook = "0.1.*"
rand="*"
getrandom={version="*",features=["js"]}
futures="0.3.*"
wasm-bindgen-futures="0.4.*"
serde={version="1.0.*",features=["derive"]}
anyhow="*"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.*"
features=["Performance","Response","console","Window","Document","HtmlCanvasElement","HtmlImageElement","CanvasRenderingContext2d","KeyboardEvent"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.

# These crates are used for running unit tests.
[dev-dependencies]
js-sys = "0.3.*"
wasm-bindgen-test = "0.3.*"
